# sss

./: .gitignore  CONTEXT.md  README.md  config.example.json  pyproject.toml
docs/adr/: 0001-depend-on-vmctl.md  0002-start-process-interactive-launch.md  0003-push-adhoc-transfer-distinct-from-sync.md  0004-standalone-no-vm-coupling.md  0005-project-dir-is-the-source-root.md  0006-caller-supplied-config-path.md
sss/: __init__.py  cli.py  config.py  connection.py  exceptions.py  scripts.py  sync.py  target.py
sss/modules/: files.py  process.py  service.py
tests/: INTEGRATION.md  conftest.py  fakes.py  test_cli.py  test_config.py  test_integration.py  test_integration_vm.py  test_primitives.py  test_scripts.py  test_sync.py  test_target.py
