[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sss"
version = "0.1.0"
description = "SSH file-sync + remote primitives tool"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "paramiko>=3.0"]

[project.scripts]
sss = "sss.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sss*"]
